<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="com.augieafr.moviecatalogue.favorite.tvshow.TvShowFavoriteFragment">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <TextView
        android:id="@+id/tv_no_tv_show_favorite"
        style="@style/TextAppearance.MdcTypographyStyles.Headline6"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:visibility="gone"
        android:text="@string/empty_favorite_tv_show" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_favorite_tv_show"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:listitem="@layout/movie_items" />

</LinearLayout>